# matt

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated.html  annotated_dup.js  backend_8cpp.html  backend_8cpp.js  backend_8hpp.html  backend_8hpp.js  backend_8hpp_source.html  classes.html  classmatt_1_1AddBackward-members.html  classmatt_1_1AddBackward.html  classmatt_1_1AddBackward.js  classmatt_1_1Backend-members.html  classmatt_1_1Backend.html  classmatt_1_1Backend.js  classmatt_1_1BinaryGradFn-members.html  classmatt_1_1BinaryGradFn.html  classmatt_1_1BinaryGradFn.js  classmatt_1_1CPUBackend-members.html  classmatt_1_1CPUBackend.html  classmatt_1_1CPUBackend.js  classmatt_1_1CUDABackend-members.html  classmatt_1_1CUDABackend.html  classmatt_1_1CUDABackend.js  classmatt_1_1Device-members.html  classmatt_1_1Device.html  classmatt_1_1Device.js  classmatt_1_1GradFn-members.html  classmatt_1_1GradFn.html  classmatt_1_1GradFn.js  classmatt_1_1MatmulBackward-members.html  classmatt_1_1MatmulBackward.html  classmatt_1_1MatmulBackward.js  classmatt_1_1MulBackward-members.html  classmatt_1_1MulBackward.html  classmatt_1_1MulBackward.js  (+195 more)
.github/workflows/: docs.yml  test.yml
bindings/: matt_bindings.cpp
include/matt/: backend.hpp  cpu_backend.hpp  cuda_backend.hpp  device.hpp  grad_fn.hpp  memory_transfer.hpp  ops.hpp  shape_utils.hpp  storage.hpp  tensor.hpp
include/matt/nn/: linear.hpp  loss.hpp  module.hpp  sequential.hpp
include/matt/nn/activations/: relu.hpp
include/matt/nn/weight_initializer/: weight_initializer.hpp
include/matt/optim/: optimizer.hpp  sgd.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+41 more)
src/: backend.cpp  cpu_backend.cpp  cuda_backend.cpp  grad_fn.cpp  memory_transfer.cpp  memory_transfer.cu  ops.cpp  shape_utils.cpp  storage.cpp  tensor.cpp
src/nn/: linear.cpp  module.cpp  sequential.cpp
src/nn/activations/: relu.cpp
src/nn/weight_initializer/: weight_initializer.cpp
tests/: test_autograd.cpp  test_device.cpp  test_matt.py  test_matt_extra.py  test_nn.cpp  test_ops.cpp  test_tensor.cpp  test_utils.hpp  test_weight_initializer.cpp
